2891581 minor changes due to Spring repository and the LocationGroupView
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@514 fda5f131-174c-0410-8613-e0905860106b

--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LocationGroupView.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/LocationGroupView.mxml
@@ -8,10 +8,10 @@
  */
 -->
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" xmlns:business="org.openwms.web.flex.client.business.*" xmlns:o="org.openwms.web.flex.client.components.*" width="1280" height="670" backgroundColor="#C2DAEF" creationComplete="init()">
-	<!-- Scripts -->
-	<mx:Script>
-		<![CDATA[
-			import org.openwms.web.flex.client.model.*;
+    <!-- Scripts -->
+    <mx:Script>
+        <![CDATA[
+            import org.openwms.web.flex.client.model.*;
 			import org.openwms.common.domain.LocationGroup;
 			import org.openwms.web.flex.client.event.LocationEvent;
 			import mx.collections.ArrayCollection;
@@ -29,8 +29,7 @@
 				new LocationEvent(LocationEvent.LOAD_ALL_LOCATIONS).dispatch()
 			}
 			
-			private function locationGroupLabel(item:Object):String
-			{
+			private function locationGroupLabel(item:Object):String {
 				if (item != null) {
 					if (item.getData() != null) {
 						return item.getData()['name'];
@@ -42,8 +41,7 @@
 				}
 			}
 			
-	        public function onTreeClick(event:Event):void
-	        {
+	        public function onTreeClick(event:Event):void {
     	        selectedLocationGroup = (event.target.selectedItem.getData()) as LocationGroup;
     	        selectedParent=findLocationGroup();
     	        showLocations();
@@ -72,23 +70,21 @@
 	        	}
 			}
 
-						private function locationIdField(item:Object, dg:DataGridColumn):String
-						{
-							return item.locationId[dg.dataField];
-						}
-						private function locationGroupField(item:Object, dg:DataGridColumn):String
-						{
-							if(item.locationGroup != null) {
-								return item.locationGroup[dg.dataField];
-							}
-      						return "NULL";
-						}
-		]]>
-	</mx:Script>
+            private function locationIdField(item:Object, dg:DataGridColumn):String {
+                return item.locationId[dg.dataField];
+            }
+            
+            private function locationGroupField(item:Object, dg:DataGridColumn):String {
+                if(item.locationGroup != null) {
+                    return item.locationGroup[dg.dataField];
+                }
+                return "NULL";
+            }
+        ]]>
+    </mx:Script>
 
-	<mx:Tree id="myTree" x="10" y="10" showRoot="false" height="650" width="236" dataProvider="{modelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="locationGroupLabel" change="onTreeClick(event)">
-	</mx:Tree>
-	<o:SuperPanel width="250" height="250" layout="absolute" x="762" y="10" title="Fill Level" showControls="true" enableResize="true">
+    <mx:Tree id="myTree" x="10" y="10" showRoot="false" height="650" width="236" dataProvider="{modelLocator.locationGroupTree}" dataDescriptor="{new TreeDataDescriptor()}" labelFunction="locationGroupLabel" change="onTreeClick(event)"></mx:Tree>
+	<mx:Panel width="250" height="250" layout="absolute" x="762" y="10" title="Fill Level">
 <!-- 
 		<mx:PieChart x="0" y="0" id="piechart1" width="100%" height="100%">
 			<mx:series>
@@ -97,8 +93,8 @@
 		</mx:PieChart>
 		<mx:Legend dataProvider="{piechart1}" width="230" height="30" y="180"/>
  -->
- 	</o:SuperPanel>
-	<o:SuperPanel width="250" height="250" layout="absolute" x="1020" y="10" title="No of Transports" showControls="true" enableResize="true">
+ 	</mx:Panel>
+	<mx:Panel width="250" height="250" layout="absolute" x="1020" y="10" title="No of Transports">
 <!-- 
 		<mx:ColumnChart x="0" y="0" id="columnchart1" height="100%" width="100%">
 			<mx:series>
@@ -106,8 +102,8 @@
 			</mx:series>
 		</mx:ColumnChart>
  -->
- 	</o:SuperPanel>
-	<o:SuperPanel x="254" y="10" width="500" height="214" layout="absolute" title="Details" showControls="true" enableResize="true">
+ 	</mx:Panel>
+	<mx:Panel x="254" y="10" width="500" height="214" layout="absolute" title="Details">
 		<mx:CheckBox x="10" y="96" label="Group State In allowed"/>
 		<mx:CheckBox x="10" y="126" label="Group State Out allowed"/>
 		<mx:Canvas x="10" y="10" width="460" height="35" borderStyle="solid" alpha="0.5" backgroundColor="#C2DAEF">
@@ -118,7 +114,7 @@
 		</mx:Canvas>
 		<mx:HSlider x="250" y="126" value="{selectedLocationGroup.maxFillLevel}"/>
 		<mx:Label x="250" y="98" text="Maximum Fill Level"/>
-	</o:SuperPanel>
+	</mx:Panel>
 	<mx:HBox width="500" height="30" backgroundColor="#FFFFFF" backgroundAlpha="0.5"  x="254" y="232" verticalAlign="middle">
 		<mx:Button x="5" y="5" label="Refresh"/>
 		<mx:Button x="84" y="5" label="Show Locations"/>
@@ -126,44 +122,43 @@
 	</mx:HBox>
 	<mx:Canvas x="254" y="268" width="1016" height="392">
 		<mx:DataGrid id="locationsList" allowMultipleSelection="true" sortableColumns="true" width="100%" height="100%" dataProvider="{selectedLocations}">
-					<mx:columns>
-						<mx:DataGridColumn dataField="area" labelFunction="locationIdField" editable="false" width="50">
-							<mx:headerRenderer>
-								<mx:Component>
-									<mx:Label text="Area" styleName="headerArea" />
-								</mx:Component>
-							</mx:headerRenderer>
-						</mx:DataGridColumn>
-						<mx:DataGridColumn headerText="Aisle" dataField="aisle" labelFunction="locationIdField" editable="false" width="50" />
-						<mx:DataGridColumn headerText="X" dataField="x" labelFunction="locationIdField" editable="false" width="50" />
-						<mx:DataGridColumn headerText="Y" dataField="y" labelFunction="locationIdField" editable="false" width="50" />
-						<mx:DataGridColumn headerText="Z" dataField="z" labelFunction="locationIdField" editable="false" width="50" />
-						<mx:DataGridColumn headerText="Location Group" dataField="name" labelFunction="locationGroupField" editable="false" />
-						<mx:DataGridColumn headerText="Description" dataField="description" editable="true" />
-						<mx:DataGridColumn headerText="Counting Active" dataField="countingActive" editable="true">
-							<mx:itemRenderer>
-								<mx:Component>
-									<mx:CheckBox />
-								</mx:Component>
-							</mx:itemRenderer>
-						</mx:DataGridColumn>
-						<mx:DataGridColumn headerText="Incoming Active" dataField="incomingActive" editable="true">
-							<mx:itemRenderer>
-								<mx:Component>
-									<mx:CheckBox />
-								</mx:Component>
-							</mx:itemRenderer>
-						</mx:DataGridColumn>
-						<mx:DataGridColumn headerText="Outgoing Active" dataField="outgoingActive" editable="true">
-							<mx:itemRenderer>
-								<mx:Component>
-									<mx:CheckBox />
-								</mx:Component>
-							</mx:itemRenderer>
-						</mx:DataGridColumn>
-						<mx:DataGridColumn headerText="Last Access" dataField="lastAccess" editable="false" />
-					</mx:columns>
-		</mx:DataGrid>
+            <mx:columns>
+                <mx:DataGridColumn dataField="area" labelFunction="locationIdField" editable="false" width="50">
+                    <mx:headerRenderer>
+                        <mx:Component>
+                            <mx:Label text="Area" styleName="headerArea" />
+                        </mx:Component>
+                    </mx:headerRenderer>
+                </mx:DataGridColumn>
+                <mx:DataGridColumn headerText="Aisle" dataField="aisle" labelFunction="locationIdField" editable="false" width="50" />
+                <mx:DataGridColumn headerText="X" dataField="x" labelFunction="locationIdField" editable="false" width="50" />
+                <mx:DataGridColumn headerText="Y" dataField="y" labelFunction="locationIdField" editable="false" width="50" />
+                <mx:DataGridColumn headerText="Z" dataField="z" labelFunction="locationIdField" editable="false" width="50" />
+                <mx:DataGridColumn headerText="Location Group" dataField="name" labelFunction="locationGroupField" editable="false" />
+                <mx:DataGridColumn headerText="Description" dataField="description" editable="true" />
+                <mx:DataGridColumn headerText="Counting Active" dataField="countingActive" editable="true">
+                    <mx:itemRenderer>
+                        <mx:Component>
+                            <mx:CheckBox />
+                        </mx:Component>
+                    </mx:itemRenderer>
+                </mx:DataGridColumn>
+                <mx:DataGridColumn headerText="Incoming Active" dataField="incomingActive" editable="true">
+                    <mx:itemRenderer>
+                        <mx:Component>
+                            <mx:CheckBox />
+                        </mx:Component>
+                    </mx:itemRenderer>
+                </mx:DataGridColumn>
+                <mx:DataGridColumn headerText="Outgoing Active" dataField="outgoingActive" editable="true">
+                    <mx:itemRenderer>
+                        <mx:Component>
+                            <mx:CheckBox />
+                        </mx:Component>
+                    </mx:itemRenderer>
+                </mx:DataGridColumn>
+                <mx:DataGridColumn headerText="Last Access" dataField="lastAccess" editable="false" />
+            </mx:columns>
+        </mx:DataGrid>
 	</mx:Canvas>
-
 </mx:Canvas>
