--- a/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/TransportUnitView.mxml
+++ b/OpenWMS-common/trunk/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/TransportUnitView.mxml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="928" height="612">
+<mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" width="928" height="612" initialize="onStartup()">
+
+    <mx:Script>
+    	<![CDATA[
+    		import org.openwms.web.flex.client.model.IconLocator;
+    		public function onStartup():void {
+    			//userAddBtn.addChild(IconLocator.iconUserAdd);
+    		}
+    		
+    	]]>
+    </mx:Script>
+
 	<mx:VBox x="10" y="10" width="908" height="592">
 		<mx:HBox width="908">
-			<mx:Button label="Add"/>
-			<mx:Button label="Save"/>
-			<mx:Button label="Delete"/>
-			<mx:Button label="Create Transport"/>
-			<mx:Button label="Transports"/>
-			<mx:Button label="History"/>
+			<mx:Button id="userAddBtn" label="Add" />
+			<mx:Button id="userSaveBtn" label="Save"/>
+			<mx:Button id="userDeleteBtn" label="Delete"/>
+			<mx:Button id="createTransportBtn" label="Create Transport"/>
+			<mx:Button id="transportsBtn" label="Transports"/>
+			<mx:Button id="historyBtn" label="History"/>
 		</mx:HBox>
 		<mx:DataGrid width="100%" height="100%">
 			<mx:columns>
