Updated configuration files, namespaces and file headers
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@648 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/renderers/UserListRenderer.mxml
@@ -89,7 +89,7 @@
 		/**
 		 * This method stores the selected user in the ModelSelector as selectedUser.
 		 * It also sends an Event to change settings in the main content panel
-		 * When the User has no UserDetails, a new set is instanciated.
+		 * When the User has no UserDetails, a new set is instantiated.
 		 *
 		 */
 		public function setSelectedItem():void {
