Added TransportUnitService to frontend
git-svn-id: https://openwms2005.svn.sourceforge.net/svnroot/openwms2005@666 fda5f131-174c-0410-8613-e0905860106b

--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/business/Services.mxml
@@ -39,6 +39,5 @@
 <mx:RemoteObject id="locationService" destination="locationService" />
 <mx:RemoteObject id="locationGroupService" destination="locationGroupService" />
 <mx:RemoteObject id="userService" destination="userService" />
-<mx:RemoteObject id="transportService" destination="transportService" />
-
+<mx:RemoteObject id="transportUnitService" destination="transportUnitService" />
 </business:ServiceLocator>
