--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/TransportUnitView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/TransportUnitView.mxml
@@ -26,6 +26,12 @@
 	<mx:Script>
     	<![CDATA[
     		import org.openwms.web.flex.client.model.IconLocator;
+    		import org.openwms.common.domain.TransportUnit;
+    		import org.openwms.web.flex.client.model.ModelLocator;
+    		[Bindable]
+            private var modelLocator:ModelLocator = ModelLocator.getInstance();
+            private static var tu:TransportUnit = new TransportUnit();
+            
     		public function onStartup():void {
     			//userAddBtn.addChild(IconLocator.iconUserAdd);
     		}
@@ -42,11 +48,9 @@
 			<mx:Button id="transportsBtn" label="Transports" />
 			<mx:Button id="historyBtn" label="History" />
 		</mx:HBox>
-		<mx:DataGrid width="100%" height="100%">
+		<mx:DataGrid width="100%" height="100%" dataProvider="{modelLocator.allTransportUnits}">
 			<mx:columns>
-				<mx:DataGridColumn headerText="Column 1" dataField="col1" />
-				<mx:DataGridColumn headerText="Column 2" dataField="col2" />
-				<mx:DataGridColumn headerText="Column 3" dataField="col3" />
+				<mx:DataGridColumn headerText="Barcode" dataField="barcode" />
 			</mx:columns>
 		</mx:DataGrid>
 	</mx:VBox>
