--- a/org.openwms/trunk/source/src/site/css/openwms-jdoc.css
+++ b/org.openwms/trunk/source/src/site/css/openwms-jdoc.css
@@ -65,24 +65,24 @@ a:link.selfref, a:visited.selfref {
  }
 
 /* Table colors */
-table
+table, table.summary
 {
  border:none;
 }
 
-td
+td, table.summary td
 {
  border: none;
  border-bottom: 1px dotted #B0CAEF;
 }
 
-th
+th, table.summary th
 {
  border: none;
 }
 
 
-.TableHeadingColor th
+.TableHeadingColor th, table.summary th
 { 
  background: #FFFFFF;
  background-image: url(../breadcrumbs.jpg);
@@ -168,4 +168,61 @@ background-color:#FFFFFF;
 .NavBarCell3
 {
 background-color:#FFFFFF;
+}
+
+/* JXR */
+ul, li	{
+ list-style-type:none ;
+ margin:0;
+ padding:0;
+ border: none;
+ border-bottom: 1px dotted #B0CAEF;
+}
+
+div.overview {
+ background-color: #c6d9f9;
+ padding: 4px 4px 4px 0;
+ border: none;
+ border-bottom: 1px dotted #B0CAEF;
+}
+div.overview li, div.framenoframe li {
+	display: inline;
+}
+div.framenoframe {
+	text-align: center;
+	font-size: x-small;
+}
+div.framenoframe li {
+	margin: 0 3px 0 3px;
+}
+div.overview li {
+	margin:3px 3px 0 3px;
+	padding: 4px;
+}
+li.selected {
+	background-color:#888;
+	color: #fff;
+	font-weight: bold;
+}
+
+em {
+	color: #3F5FBF;
+}
+em.comment {
+	color: #3F5FBF;
+}
+.string {
+	color: #009;
+}
+div#footer {
+	text-align:center;
+}
+#overview {
+	padding:2px;
+}
+            
+            
+hr {
+	height: 1px;
+	color: #000;
 }
