--- a/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
+++ b/org.openwms/trunk/source/org.openwms.client.flex.app/src/main/flex/org/openwms/web/flex/client/view/ModuleManagementView.mxml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:VBox xmlns:mx="http://www.adobe.com/2006/mxml" width="100%" height="100%">
+
+    <mx:Script>
+        <![CDATA[
+            import org.openwms.web.flex.client.service.ModuleLocator;
+            [Bindable]
+            private var moduleLocator:ModuleLocator = ModuleLocator.getInstance();
+        ]]>
+    </mx:Script>
+
+
+
 	<mx:HBox width="100%">
 		<mx:Button label="Add"/>
 		<mx:Button label="Delete"/>
 	</mx:HBox>
 	<mx:HBox width="100%">
-		<mx:DataGrid width="300">
+		<mx:DataGrid width="300" dataProvider="{ModuleLocator.getRegisteredModules()}">
 			<mx:columns>
 				<mx:DataGridColumn headerText="Column 1" dataField="col1"/>
 				<mx:DataGridColumn headerText="Column 2" dataField="col2"/>
